--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     </div>
     <div class="div_content">
       <div class="siteWidth">
+          <h1>fghgfhgfh</h1>
           <div class="_images">
           <div>
             <img src="images/about_1.jpg">  
