--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
           <div>
             <img src="images/about_1.jpg">  
           </div>
+              <h1>hjkhkjh</h1>
           <div>
             <img src="images/about_2.jpg">
           </div>
