--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet/less" type="text/css" href="css/style.less">
     <link rel="stylesheet/less" type="text/css" href="css/contacts.less">
     <script type="text/javascript" src="js/less.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"
+        type="text/javascript"></script>
     <!-- ФУЧИКА -->
     <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=djcPL020RL0WQ-Td1yGBchCBJJ_oaDOx&width=450&height=400&id=f"></script>
     <!-- ФУЧИКА -->
@@ -40,8 +41,55 @@
             display: none;
         }  
     </style>
+      
+      <script>
+        $(function() {
+            var hwindow = screen.height;
+            if(hwindow >= 1024) {
+                hwindow -= 250;
+            } else {
+                hwindow = hwindow/2;
+            }
+            $('.div_content').css('min-height', hwindow);
+
+            $('._message .btn_sim').click(function() {
+                $('._backForm').show();
+           });
+           $('._close a').click(function(){
+            $('._backForm').hide();
+           });
+            var h = $(window).height();
+            var e = $('._modalWindow').height();
+            });
+      </script>
+      
   </head>
   <body>
+      <div class="_backForm">
+  <div class="_modalWindow">
+    <div class="_close">
+      <a href="javascript:">Закрыть</a>
+    </div>
+    <img src="/q/images/onmain.png" alt="">
+    <form action="">
+      <div>
+      Имя: <br>
+      <input type="text">
+      </div>
+      <div>
+      Телефон или e-mail: <br>
+      <input type="text">
+      </div>
+      <div>
+      Доп. информация: <br>
+      <textarea></textarea>
+      </div>
+      <div>
+      <input class="btn_sim" type="submit" value="Отправить">
+      </div>
+    </form>
+  </div>
+</div>
     <div class="div_header">
       <div class="siteWidth">
         <div class="_logo">
@@ -110,7 +158,7 @@
           <div>email: info@arzoli.ru</div>
         </div>
         <div class="_message">
-          <a href="#" class="btn_sim">Оставьте сообщение</a>
+          <a href="javascript:" class="btn_sim">Оставьте сообщение</a>
         </div>
       </div>
     </div>
