--- a/modal.html
+++ b/modal.html
@@ -8,21 +8,22 @@
     <script type="text/javascript" src="js/less.js"></script>
     <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
     <script>
-      $(function() {
-       var hwindow = screen.height;
-       if(hwindow >= 1024) {
-        hwindow -= 450;
-       }else {
-        hwindow = hwindow/2;
-       }
-       $('.div_content').css('min-height', hwindow);
-       $('._message .btn_sim').click(function() {
-          $('._backForm').show();
-       });
-       $('._close a').click(function(){
-        $('._backForm').hide();
-       });
-      });
+        $(function() {
+            var height = $(window).height();
+            var head = $('.div_header').height();
+            var foot = $('.div_footer').height();
+            var contentHeight = height-(head+foot);
+            var paddingContent = (50/contentHeight)*100;
+
+            $('.div_content').css('min-height', contentHeight);
+              
+            $('._message .btn_sim').click(function() {
+                $('._backForm').show();
+           });
+           $('._close a').click(function(){
+            $('._backForm').hide();
+           });
+        });
     </script>
       
       <script>
